# rubiks_solver

./: Cargo.toml  justfile  main.py  pyproject.toml
rubixpy/: __init__.py  bar.py  main.py
src/: lib.rs
